# evidence-approval-recognition

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/dataset_versions/: v0.1.yaml
configs/template_versions/: templates_v0.1.yaml
data/: README.md
data/fixtures/: example_trial.json  invalid_trial_label_leak.json  invalid_trial_missing_hidden_field.json
data/interim/: amps_items_100.json  base_items_200.json  medquad_items_100.json
data/raw/: amps_pool_500.json  medquad_pool_500.json
docs/: README.md  action_items.md  authority_deference_finding.md  curation_protocol.md  dataset_card_template.md  human_audit_checklist.md  judging_architecture.md  jul_17_action_items.md  naming_conventions.md  notebook_pilot_findings.md  pressure_taxonomy.md  relational_interventions_and_the_dispositional_axis.md  schema_reference.md
docs/audit/: action_items.md  human_audit_checklist.md  human_audit_sample_trials.md  weekly_summary_2026-07-23.md
docs/flowcharts/: README.md  (+3 more)
experiments/: README.md
notebooks/: README.md  two_gate_probe.ipynb
paper/: README.md
prompts/: README.md
results/: README.md
scripts/: assemble_trials.py  build_amps_items.py  build_medquad_items.py  lib_amps.py  lib_medquad.py  merge_base_items.py  pressure_manifest.py
src/: cli.py
tests/: test_id_generation.py  test_memory_audit.py  test_memory_policies.py  test_memory_retrieval.py  test_memory_schema.py  test_schema_invalid_trial.py  test_schema_valid_trial.py  test_template_family.py  test_template_loading.py  test_validation_checks.py
(+28882 files in other folders)
