[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evidence-gates"
version = "0.1.0"
description = "Data-curation infrastructure for false belief persistence in memory-augmented LLM agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
eg = "cli:app"

[tool.hatch.build.targets.wheel]
packages = [
    "src/coding",
    "src/generation",
    "src/evaluation",
    "src/runners",
    "src/memory",
    "src/analysis",
]

[tool.hatch.build.targets.wheel.force-include]
"src/cli.py" = "cli.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
# Ancil's exploratory pilot notebook is intentionally not held to the library
# lint bar (ad-hoc analysis code); exclude it so CI lints first-party code only.
extend-exclude = ["notebooks/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/cli.py" = ["B008"]
